V0.5.0.0
- added collection filter
- added collection action (add and delete)
- added collection editor and macro

V0.4.0.0
- added Formula Solver function and macro

V0.3.0.0
- added set macro flag action
- added clear macro flag execute once action
- updates default GSAKWrapper macro
- fix for Cutom fields (now also addes global fields to the list)

V0.2.0.0
- macro's saved as ANSI instead of UTF8
- added geocache counter filter (to limit selected geocaches)
- added History file (this file)
- changed macro destination folder for flow and sequence macro (not program folder anymore)
- added export to GPX action
- added custom date field filter
- added export to GGZ action

V0.1.0.0
- initial release