@@ -23,6 +23,7 @@ namespace GSAKWrapper
         public List<DataTypes.LogType> LogTypes;
 
         public List<DataTypes.GSAKCustomGlobal> GSAKCustomGlobals { get; set; }
+        public List<string> GSAKLocations { get; set; }
 
         private int _activityCounter = 0;
         public void BeginActiviy()
@@ -88,6 +89,7 @@ namespace GSAKWrapper
             WaypointTypes = new List<DataTypes.WaypointType>();
             LogTypes = new List<DataTypes.LogType>();
             GSAKCustomGlobals = new List<DataTypes.GSAKCustomGlobal>();
+            GSAKLocations = new List<string>();
 
             //addCacheType(0, "Not present");
             addCacheType(2, "Traditional Cache", 'T');
