@@ -22,6 +22,10 @@ namespace GSAKWrapper.UIControls.ActionBuilder
         public override SearchType SearchTypeTarget { get { return SearchType.Children; } }
         public override UIElement GetUIElement()
         {
+            if (Values.Count == 0)
+            {
+                Values.Add(Utils.Conversion.GetCoordinatesPresentation(new Utils.Location(51.5, 5.5)));
+            }
             /*
              * ------------------------
              * |  N51.33.... | [...]  |
@@ -30,16 +34,12 @@ namespace GSAKWrapper.UIControls.ActionBuilder
              */
             StackPanel sp = new StackPanel();
 
-            Grid g = new Grid();
-            TextBox tb = new TextBox();
-            tb.HorizontalAlignment = HorizontalAlignment.Left;
-            tb.Width = 180;
-            if (Values.Count == 0)
-            {
-                Values.Add(Utils.Conversion.GetCoordinatesPresentation(new Utils.Location(51.5, 5.5)));
-            }
-            tb.Text = Values[0];
-            g.Children.Add(tb);
+            var g = new StackPanel();
+            g.Orientation = Orientation.Horizontal;
+            var opts = ApplicationData.Instance.GSAKLocations.ToArray();
+            ComboBox cb = CreateComboBox(opts, Values[0]);
+            cb.Width = 180;
+            g.Children.Add(cb);
 
             Button b = new Button();
             b.Content = Localization.TranslationManager.Instance.Translate(STR_CHECK);
@@ -49,7 +49,7 @@ namespace GSAKWrapper.UIControls.ActionBuilder
 
             sp.Children.Add(g);
 
-            tb = new TextBox();
+            var tb = new TextBox();
             tb.HorizontalAlignment = HorizontalAlignment.Center;
             if (Values.Count < 2)
             {
@@ -62,16 +62,16 @@ namespace GSAKWrapper.UIControls.ActionBuilder
 
         void bActionDistanceToLocation_Click(object sender, RoutedEventArgs e)
         {
-            var l = Utils.Conversion.StringToLocation((((sender as Button).Parent as Grid).Children[0] as TextBox).Text);
+            var l = Utils.Conversion.StringToLocation((((sender as Button).Parent as StackPanel).Children[0] as ComboBox).Text);
             if (l != null)
             {
-                (((sender as Button).Parent as Grid).Children[0] as TextBox).Text = Utils.Conversion.GetCoordinatesPresentation(l);
+                (((sender as Button).Parent as StackPanel).Children[0] as ComboBox).Text = Utils.Conversion.GetCoordinatesPresentation(l);
             }
         }
 
         public override void CommitUIData(UIElement uiElement)
         {
-            Values[0] = (((uiElement as StackPanel).Children[0] as Grid).Children[0] as TextBox).Text;
+            Values[0] = (((uiElement as StackPanel).Children[0] as StackPanel).Children[0] as ComboBox).Text;
             Values[1] = ((uiElement as StackPanel).Children[1] as TextBox).Text;
         }
         public override bool PrepareRun(Database.DBCon db, string tableName)
