@@ -2,6 +2,7 @@ V0.5.0.0
 - added collection filter
 - added collection action (add and delete)
 - added collection editor and macro
+- added GSAK locations to location filters
 
 V0.4.0.0
 - added Formula Solver function and macro
